--- a/css/common.scss
+++ b/css/common.scss
@@ -1,15 +1,5 @@
 @import "_scss.scss";
 
-// * {
-//     border: 1px solid gray;
-// }
-
-// .flex {
-//     display: flex;
-//     justify-content: center;
-//     flex-wrap: nowrap;
-// }
-
 
 .shortcut {
     height: 31px;
@@ -60,103 +50,166 @@
     height: 105px;
 
     .w {
-        position: relative;
-
-        .logo {
-            position: absolute;
-            top: 25px;
-            width: 171px;
-            height: 61px;
-
-            a {
-                display: block;
-                width: 171px;
-                height: 61px;
-                background: url(../images/logo.png) no-repeat;
-                font-size: 0;
-            }
-        }
-
         .search {
+            width: 100%;
+            height: 95px;
+
+            .search-m {
+                position: relative;
+                margin: 0 auto;
+                width: 1200px;
+                height: 95px;
+
+                .logo {
+                    position: absolute;
+                    top: 25px;
+                    width: 171px;
+                    height: 61px;
+
+                    a {
+                        display: block;
+                        width: 171px;
+                        height: 61px;
+                        background: url(../images/logo.png) no-repeat;
+                        font-size: 0;
+                    }
+                }
+
+                .form {
+                    display: flex;
+                    width: 538px;
+                    height: 36px;
+                    position: absolute;
+                    top: 25px;
+                    left: 346px;
+
+                    input[type=search] {
+                        width: 455px;
+                        height: 36px;
+                        padding: 0 10PX;
+                        color: $gray;
+                        border: 2px solid $cis;
+                        border-right: none;
+                    }
+
+                    button[type=button] {
+                        width: 83px;
+                        height: 36px;
+                        background-color: $cis;
+                        color: white;
+                        font-size: 16px;
+                        font-weight: 600;
+
+                        &:hover {
+                            background-color: $black-cis;
+                        }
+                    }
+                }
+
+                .hotwords {
+                    position: absolute;
+                    top: 66px;
+                    left: 358px;
+
+                    a {
+                        margin-right: 15px;
+
+                        &:first-child {
+                            color: $cis;
+                        }
+                    }
+                }
+
+                .shopcar {
+                    position: absolute;
+                    top: 25px;
+                    right: 60px;
+                    width: 140px;
+                    height: 35px;
+                    border: 1px solid #dfdfdf;
+                    background-color: #f7f7f7;
+                    text-align: center;
+                    line-height: 35px;
+
+                    &::before {
+                        content: '\e93a';
+                        font-family: 'icomoon';
+                        margin-right: 5px;
+                        color: $cis;
+                    }
+
+                    &::after {
+                        content: '\e901';
+                        font-family: 'icomoon';
+                        margin-left: 5px;
+                    }
+
+                    .count {
+                        position: absolute;
+                        top: -7px;
+                        left: 100px;
+                        padding: 1px 5px;
+                        background-color: $cis;
+                        color: white;
+                        line-height: 14px;
+                        text-align: center;
+                        border-radius: 7px 7px 7px 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.search-fix {
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 95px;
+    background-color: white;
+    border-bottom: 2px solid $black-cis;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+    animation: searchTop 0.5s ease-in-out;
+}
+
+@keyframes searchTop {
+    0% {
+        top: -50px;
+    }
+
+    100% {
+        top: 0px;
+    }
+}
+
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 250px;
+    left: 50%;
+    margin-left: 608px;
+
+    img {
+        width: 70px;
+        margin-bottom: 20px;
+    }
+
+    .top {
+        font-size: 14px;
+        line-height: 14px;
+
+        &::before {
             display: flex;
-            width: 538px;
-            height: 36px;
-            position: absolute;
-            top: 25px;
-            left: 346px;
-
-            input[type=search] {
-                width: 455px;
-                height: 36px;
-                padding: 0 10PX;
-                color: $gray;
-                border: 2px solid $cis;
-                border-right: none;
-            }
-
-            button[type=button] {
-                width: 83px;
-                height: 36px;
-                background-color: $cis;
-                color: white;
-                font-size: 16px;
-                font-weight: 600;
-
-                &:hover {
-                    background-color: $black-cis;
-                }
-            }
-        }
-
-        .hotwords {
-            position: absolute;
-            top: 66px;
-            left: 358px;
-
-            a {
-                margin-right: 15px;
-
-                &:first-child {
-                    color: $cis;
-                }
-            }
-        }
-
-        .shopcar {
-            position: absolute;
-            top: 25px;
-            right: 60px;
-            width: 140px;
-            height: 35px;
-            border: 1px solid #dfdfdf;
-            background-color: #f7f7f7;
-            text-align: center;
-            line-height: 35px;
-
-            &::before {
-                content: '\e93a';
-                font-family: 'icomoon';
-                margin-right: 5px;
-                color: $cis;
-            }
-
-            &::after {
-                content: '\e901';
-                font-family: 'icomoon';
-                margin-left: 5px;
-            }
-
-            .count {
-                position: absolute;
-                top: -7px;
-                left: 100px;
-                padding: 1px 5px;
-                background-color: $cis;
-                color: white;
-                line-height: 14px;
-                text-align: center;
-                border-radius: 7px 7px 7px 0;
-            }
+            flex-direction: column;
+            align-items: center;
+            content: '\e902';
+            font-family: 'icomoon';
+            font-size: 20px;
         }
     }
 }
